fixed back-to-top button display on iOS

--- a/src/routes/RecipesPage/RecipesPage.css
+++ b/src/routes/RecipesPage/RecipesPage.css
@@ -46,16 +46,13 @@
     bottom: 20px;
     right: 30px;
     background-color: #F03C05;
-    border-radius: 50%;
+    border-radius: 3px;
     border: none;
-    font-size: 20px;
     color: white;
     cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    width: 41px;
-    height: 41px;
+    text-align: center;
     font-size: 25px;
-    padding-bottom: 5px;
+    padding: 3px 12px 4px;
 }
 
 
